fix: status player info fix and ignore players who dont want to be listed & test